# embedded_hal_spy

./: .gitignore  Cargo.toml  README.md
examples/spi-demo/: Cargo.toml  README.md
examples/spi-demo/src/: main.rs
src/: lib.rs
