[package]
name = "spi-demo"
version = "0.1.1"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.10"
alloc-cortex-m = "0.3.5"
cortex-m = "0.5.10"
panic-halt = "0.2.0"
nrf52832-hal = "0.8.1"
embedded-hal-spy = {path="../..",features=["embedded_hal_digital_io_legacy_v1"] }
## nrf52832-pac = "0.8.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
